# Text-Adventures

./: .replit  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml  setup.py
TextAdventures/: __init__.py  timing.py
text_adventures/: __init__.py
text_adventures.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
